--- a/ME420/_config.yml
+++ b/ME420/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: ME420 - Practical DFT
 subtitle: 
-url: "http://peterschindler.github.io/"
+url: "http://peterschindler.github.io/ME420/"
 baseurl: ""
 
 # Build settings
