Revert "Updated some files to reflect change to subfolder"
This reverts commit a8679b77766e3eb0ae53348d5e2c8d5f2900f4ef.

--- a/ME420/_config.yml
+++ b/ME420/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: ME420 - Practical DFT
 subtitle: 
-url: "http://peterschindler.github.io/ME420/"
+url: "http://peterschindler.github.io"
 baseurl: ""
 
 # Build settings
